--- a/index.html
+++ b/index.html
@@ -76,24 +76,11 @@ h2{font-size: 25px; height: 25px; line-height: 25px;}
     <li>Ge mig skeden, tack ⟶ Ge du jag den sked, tack</li>
 </ul>
 
-<p>Alla grundläggande ordklasser utom verben försvinner; adjektiv och substantiv konverteras rätt av – "glad" betyder nu <em>att vara/är glad</em>, "hund" betyder
-<em>att vara/är en hund</em>.</p>
-
-<p>För att skapa adjektiv tar man verbet och lägger till <em>le</em>. Samma process, fast med <em>re</em>, används för att skapa substantiv.<p>
-<p>Dessa ordklass-skapande partiklar är egentligen egna ord, men uttalas med en mycket kort paus efter verbet de modifierar. Jag använder här en apostrof för att visa detta.</p>
-
-<ul>
-    <li>Han är pratsam ⟶ Han're är prata'le</li>
-    <li>Den som är stark måste också vara snäll ⟶ Den stark're måste också snäll're</li>
-    <li>Brevbäraren kommer inte på söndag ⟶ Den brevbär're inte kom på söndag're</li>
-</ul>
-
 <p>Nu bryts alla sammansatta ord upp; förleden blir adjektiv till efterleden. Ord som är sammansättningar av ord från främmande språk – exempelvis <em>telefon</em> – 
 påverkas inte.</p>
-<p>Ord som med tiden ändrats från sin nuvarande stavning återställs till sin ursprungliga, så att tex. <em>tisdag</em> – "Tyrs dag" – blir <em>tyr'le dag're</em>. </p>
 
+<!--<p>Ord som med tiden ändrats från sin nuvarande stavning återställs till sin ursprungliga, så att tex. <em>tisdag</em> – "Tyrs dag" – blir <em>tyr dag</em>. </p>-->
 
-<!--
 <p>För att skapa adjektiv av substantiv finns i svenskan en hel del överlappande regler: <em>-isk</em>, <em>-al</em>, <em>-ell</em>, <em>-ig</em>, <em>-lig</em>, och <em>-sam</em>; e.g.
 <em>soviet-isk</em>, <em>kommun-al</em>, <em>kultur-ell</em>, <em>lyx-ig</em>, <em>natur-lig</em>, samt <em>prat-sam</em>. Endast <em>-al</em> får kvarstå, och separeras till ett eget ord.
 Exempelvis <em>pratsam</em> blir då <em>prata al</em>.</p>
@@ -103,11 +90,7 @@ Exempelvis <em>pratsam</em> blir då <em>prata al</em>.</p>
 <ul>
     <li>Stor som en elefant ⟶ Elefant al stor</li>
     <li>Barnets bilderbok ⟶ Bild al bok av den barn</li>
-    <li> ⟶ </li>
 </ul>
--->
-
-<!--
 
 <h2>Exempeltext</h2>
 
@@ -126,9 +109,23 @@ med två bar hand av jag.</p>
 
 <p>Inte bara vara jag utförlig utbildad i ovapenal kamp, utan jag ha även tillgång till hel arsenal av den försvarsmakt, och
 jag komma att använda den till full för att förinta eländig röv av du från den kontinent, liten skit du. Om du bara har kunna
-veta den ohelig straff som liten "smart" kommentar av du vara på väg att få ner över du, så kanske du har skola hålla jävelal
-tunga av du. Men den har kunna du inte, den har göra du inte, och nu betala du den pris, jävelal idiot du.</p>
+veta den ohelig straff som liten "smart" kommentar av du vara på väg att få ner över du, så kanske du har skola hålla jävel al
+tunga av du. Men den har kunna du inte, den har göra du inte, och nu betala du den pris, jävel al idiot du.</p>
 
 <p>Jag komma skita vrede över du och du komma att drunkna i den. Du är död, grabb.</p>
--->
 
+<!--
+
+<p>Alla grundläggande ordklasser utom verben försvinner; adjektiv och substantiv konverteras rätt av – "glad" betyder nu <em>att vara/är glad</em>, "hund" betyder
+<em>att vara/är en hund</em>.</p>
+
+<p>För att skapa adjektiv tar man verbet och lägger till <em>le</em>. Samma process, fast med <em>re</em>, används för att skapa substantiv.<p>
+<p>Dessa ordklass-skapande partiklar är egentligen egna ord, men uttalas med en mycket kort paus efter verbet de modifierar. Jag använder här en apostrof för att visa detta.</p>
+
+<ul>
+    <li>Han är pratsam ⟶ Han're är prata'le</li>
+    <li>Den som är stark måste också vara snäll ⟶ Den stark're måste också snäll're</li>
+    <li>Brevbäraren kommer inte på söndag ⟶ Den brevbär're inte kom på söndag're</li>
+</ul>
+
+-->
