--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@ h2{font-size: 25px; height: 25px; line-height: 25px;}
 </ul>
 
 <p>Alla adjektivböjningar försvinner. Komparativ görs regelbundna utan undantag.</p>
-
+<p>Adverb försvinner även, adjektiv kan nu användas för att beskriva verb.</p>
 <ul>
     <li>Ett grönt hus ⟶ En grön hus</li>
     <li>Stor, större, störst ⟶ Stor, mer stor, mest stor</li>
     <li>Den vise mannen och den visa kvinnan ⟶ Den vis man och den vis kvinna</li>
+    <li>Det är jobbigt och svårt att åka skridskor ⟶ Det är jobbig svår att åka skridskor</li>
 </ul>
 
 <p>Svenskan har lite reliker från gamla böjningsystem, tex. pronomenen som "du" böjs till "dig" och "din" osv. Dessa tas bort.</p>
@@ -70,47 +71,47 @@ h2{font-size: 25px; height: 25px; line-height: 25px;}
 <p>Verb böjs ej längre; imperativformen används alltid (e.g. <em>spring</em>). För att uttrycka tempus används "har" / "kommer" etc.</p>
 
 <ul>
-    <li>Flygplanet landade säkert ⟶ Den flygplan har säkert landa</li>
+    <li>Flygplanet landade säkert ⟶ Den flygplan har säker landa</li>
     <li>Att flyga var roligt ⟶ Att flyg har rolig var</li>
-    <li>Bollen kom rullandes ner för backen ⟶ Den boll har rullande kom ner för den backe</li>
+    <li>Bollen kom rullandes ner för backen ⟶ Den boll rullande har kom ner för den backe</li>
     <li>Ge mig skeden, tack ⟶ Ge du jag den sked, tack</li>
 </ul>
 
 <p>Nu bryts alla sammansatta ord upp; förleden blir adjektiv till efterleden. Ord som är sammansättningar av ord från främmande språk – exempelvis <em>telefon</em> – 
 påverkas inte.</p>
 
-<!--<p>Ord som med tiden ändrats från sin nuvarande stavning återställs till sin ursprungliga, så att tex. <em>tisdag</em> – "Tyrs dag" – blir <em>tyr dag</em>. </p>-->
-
 <p>För att skapa adjektiv av substantiv finns i svenskan en hel del överlappande regler: <em>-isk</em>, <em>-al</em>, <em>-ell</em>, <em>-ig</em>, <em>-lig</em>, och <em>-sam</em>; e.g.
-<em>soviet-isk</em>, <em>kommun-al</em>, <em>kultur-ell</em>, <em>lyx-ig</em>, <em>natur-lig</em>, samt <em>prat-sam</em>. Endast <em>-al</em> får kvarstå, och separeras till ett eget ord.
-Exempelvis <em>pratsam</em> blir då <em>prata al</em>.</p>
+<em>soviet-isk</em>, <em>kommun-al</em>, <em>kultur-ell</em>, <em>lyx-ig</em>, <em>natur-lig</em>, samt <em>prat-sam</em>. Endast <em>-al</em> får kvarstå, och kan separeras till ett
+eget ord vid tvetydligheter eller outtalbarhet.
+
+Exempelvis <em>smutsig</em> blir då <em>smutsal</em>.</p>
 
 <p>Regeln görs även produktiv, dvs. kan alla substantiv och verb adjektiviseras utan att talaren nödvändigtvis hört det nya ordet användas förut.</p>
 
 <ul>
-    <li>Stor som en elefant ⟶ Elefant al stor</li>
-    <li>Barnets bilderbok ⟶ Bild al bok av den barn</li>
+    <li>Stor som en elefant ⟶ Elefantal stor</li>
+    <li>Barnets bilderbok ⟶ Bildal bok av den barn</li>
 </ul>
 
 <h2>Exempeltext</h2>
 
-<p>Vad fan har säga du just om jag, liten slampa du? Du skola veta att jag har gå ut med topp al betyg från den försvara al makt,
-och har inblanda vara i mången hemlig räd mot Al-Qaeda, och jag ha över 300 bekräfta al mord. Jag vara utbilda al inom
-gorilla al krigföring och jag vara den mest bra pricka al skytt i hel den vapen al styrka av Sverige.</p>
+<p>Vad fan har säg du just om jag, liten slampa du? Du skola vet att jag har gå ut med toppal betyg från den försvaral makt,
+och har inblanda var i mången hemlig räd mot Al-Qaeda, och jag ha över 300 bekräftal mord. Jag utbildal var inom
+gorillal krigal för och jag var den mest bra prickal skytt i hel den vapenal styrka av Sverige.</p>
 
-<p>För jag vara du ingenting annan än bara en mål. Jag komma utplåna du med precision lik aldrig har skåda på den här
-jord, märk du ord av jag. Tro du att du kunna undan med att säga sådan skit till jag via internet? Tänka du igen, jävel du.</p>
+<p>För jag var du ingenting annan än bara en mål. Jag komma utplåna du med precision lik aldrig har skåda på den här
+jord, märk du ord av jag. Tro du att du kunna kom undan med att säg sådan skit till jag via internet? Tänk du igen, jävel du.</p>
 
 <p>Medan två jag tala kontakta jag hemlig nätverk av jag med spion över hel Sverige, och IP av du spåra just nu, så mest bra
-för du att du förbereda du för den storm, kryp. Den storm som utplåna den patetisk sak du kalla liv av du. Du vara död, grabb.</p>
+för du att du förbereda du för den storm, kryp. Den storm som utplåna den patetisk sak du kalla liv av du. Du var död, grabb.</p>
 
-<p>Jag kunna vara var som mest gärna, när som mest gärna, och jag kunna döda du på över 700 olik sätt, och den vara endast
+<p>Jag kunna var var som mest gärna, när som mest gärna, och jag kunna döda du på över 700 olik sätt, och den var endast
 med två bar hand av jag.</p>
 
-<p>Inte bara vara jag utförlig utbildad i ovapenal kamp, utan jag ha även tillgång till hel arsenal av den försvarsmakt, och
+<p>Inte bara var jag utförlig utbildad i ovapenal kamp, utan jag ha även tillgång till hel arsenal av den försvarsmakt, och
 jag komma att använda den till full för att förinta eländig röv av du från den kontinent, liten skit du. Om du bara har kunna
-veta den ohelig straff som liten "smart" kommentar av du vara på väg att få ner över du, så kanske du har skola hålla jävel al
-tunga av du. Men den har kunna du inte, den har göra du inte, och nu betala du den pris, jävel al idiot du.</p>
+veta den ohelig straff som liten "smart" kommentar av du var på väg att få ner över du, så kanske du har skola hålla jävelal
+tunga av du. Men den har kunna du inte, den har göra du inte, och nu betala du den pris, jävelal idiot du.</p>
 
 <p>Jag komma skita vrede över du och du komma att drunkna i den. Du är död, grabb.</p>
 
