--- a/index.html
+++ b/index.html
@@ -1,132 +1,5 @@
-
 <!DOCTYPE html>
-<title>En analytisk reform av det svenska språket</title>
+<title>aransentin.github.io</title>
 <meta name=viewport content='width=device-width,initial-scale=1'>
-<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700">
 
-<style>
-body{
-    margin: 0 auto;
-    padding: 0 10px 100px 10px;
-    max-width: 800px;
-    font-family: 'Source Sans Pro';
-    font-size: 16px;
-    line-height: 20px;
-}
-h1{font-size: 30px; height: 30px; line-height: 30px;}
-h2{font-size: 25px; height: 25px; line-height: 25px;}
-</style>
-
-<h1>Ett förslag till en analytisk reform av det svenska språket</h1>
-
-<p>Det första steget är att ta bort neutrumgenuset, så att alla ord är utrum, dvs. <em>en</em>-ord.</p>
-
-<ul>
-    <li>ett äpple ⟶ en äpple</li>
-    <li>ett öga ⟶ en öga</li>
-    <li>ett ord ⟶ en ord</li>
-</ul>
-
-<p>Sedan försvinner böjningen för bestämd form. Om det inte är uppenbart från kontexten vad som åsyftas, kan det specificeras med <em>en</em> och <em>den</em> för obestämd respektive bestämd form.</p>
-
-<ul>
-    <li>Var ligger nycklarna? ⟶ Var ligger nycklar?</li>
-    <li>Jag tycker om glassen! ⟶ Jag tycker om den glass!</li>
-    <li>Jag ser <em>ett</em> hus, men inte <em>huset</em> ⟶ Jag ser <em>en</em> hus, men inte <em>den</em> hus</li>
-</ul>
-
-<p>Nästa steg är att ta bort pluralböjningar. Vill man vara specifik får man använda mängdord; eftersom "oss" försvinner kan man ersätta med "få jag" eller "några jag" beroende på gruppstorlek. "hen" behövs nu på riktigt, eftersom "de" och "dem" försvinner.</p>
-
-<ul>
-    <li>Jag har tolv kronor ⟶ Jag har tolv krona</li>
-    <li>Ta på dig kläder ⟶ Ta på dig kläd</li>
-    <li>Katten sprang ifrån dem ⟶ Den katt sprang ifrån få hen</li>
-</ul>
-
-<p>Possessiva kasusböjningar försvinner. För att markera ägande gör vi det som är möjligt i engelskan, dvs. att omskriva "the cat's claw" till "the claw of the cat". "kattens klo" blir då "klo av den katt".</p>
-
-<ul>
-    <li>Mannens hatt blåste bort ⟶ Hatt av den man blåste bort</li>
-    <li>Manshatten blåste bort ⟶ Hatt av man blåste bort</li>
-    <li>Mitt liv är över ⟶ Liv av jag är över</li>
-</ul>
-
-<p>Alla adjektivböjningar försvinner. Komparativ görs regelbundna utan undantag.</p>
-<p>Adverb försvinner även, adjektiv kan nu användas för att beskriva verb.</p>
-<ul>
-    <li>Ett grönt hus ⟶ En grön hus</li>
-    <li>Stor, större, störst ⟶ Stor, mer stor, mest stor</li>
-    <li>Den vise mannen och den visa kvinnan ⟶ Den vis man och den vis kvinna</li>
-    <li>Det är jobbigt och svårt att åka skridskor ⟶ Det är jobbig svår att åka skridskor</li>
-</ul>
-
-<p>Svenskan har lite reliker från gamla böjningsystem, tex. pronomenen som "du" böjs till "dig" och "din" osv. Dessa tas bort.</p>
-
-<ul>
-    <li>Jag gav honom halva dina pengar ⟶ Jag gav han halv peng av du</li>
-    <li>Vi ser dem ⟶ Få jag ser all hon</li>
-    <li>Vår plan är felfri ⟶ Plan av två jag är felfri</li>
-</ul>
-
-<p>Verb böjs ej längre; imperativformen används alltid (e.g. <em>spring</em>). För att uttrycka tempus används "har" / "kommer" etc.</p>
-
-<ul>
-    <li>Flygplanet landade säkert ⟶ Den flygplan har säker landa</li>
-    <li>Att flyga var roligt ⟶ Att flyg har rolig var</li>
-    <li>Bollen kom rullandes ner för backen ⟶ Den boll rullande har kom ner för den backe</li>
-    <li>Ge mig skeden, tack ⟶ Ge du jag den sked, tack</li>
-</ul>
-
-<p>Nu bryts alla sammansatta ord upp; förleden blir adjektiv till efterleden. Ord som är sammansättningar av ord från främmande språk – exempelvis <em>telefon</em> – 
-påverkas inte.</p>
-
-<p>För att skapa adjektiv av substantiv finns i svenskan en hel del överlappande regler: <em>-isk</em>, <em>-al</em>, <em>-ell</em>, <em>-ig</em>, <em>-lig</em>, och <em>-sam</em>; e.g.
-<em>soviet-isk</em>, <em>kommun-al</em>, <em>kultur-ell</em>, <em>lyx-ig</em>, <em>natur-lig</em>, samt <em>prat-sam</em>. Endast <em>-al</em> får kvarstå, och kan separeras till ett
-eget ord vid tvetydligheter eller outtalbarhet.
-
-Exempelvis <em>smutsig</em> blir då <em>smutsal</em>.</p>
-
-<p>Regeln görs även produktiv, dvs. kan alla substantiv och verb adjektiviseras utan att talaren nödvändigtvis hört det nya ordet användas förut.</p>
-
-<ul>
-    <li>Stor som en elefant ⟶ Elefantal stor</li>
-    <li>Barnets bilderbok ⟶ Bildal bok av den barn</li>
-</ul>
-
-<h2>Exempeltext</h2>
-
-<p>Vad fan har säg du just om jag, liten slampa du? Du skola vet att jag har gå ut med toppal betyg från den försvaral makt,
-och har inblanda var i mången hemlig räd mot Al-Qaeda, och jag ha över 300 bekräftal mord. Jag utbildal var inom
-gorillal krigal för och jag var den mest bra prickal skytt i hel den vapenal styrka av Sverige.</p>
-
-<p>För jag var du ingenting annan än bara en mål. Jag komma utplåna du med precision lik aldrig har skåda på den här
-jord, märk du ord av jag. Tro du att du kunna kom undan med att säg sådan skit till jag via internet? Tänk du igen, jävel du.</p>
-
-<p>Medan två jag tala kontakta jag hemlig nätverk av jag med spion över hel Sverige, och IP av du spåra just nu, så mest bra
-för du att du förbereda du för den storm, kryp. Den storm som utplåna den patetisk sak du kalla liv av du. Du var död, grabb.</p>
-
-<p>Jag kunna var var som mest gärna, när som mest gärna, och jag kunna döda du på över 700 olik sätt, och den var endast
-med två bar hand av jag.</p>
-
-<p>Inte bara var jag utförlig utbildad i ovapenal kamp, utan jag ha även tillgång till hel arsenal av den försvarsmakt, och
-jag komma att använda den till full för att förinta eländig röv av du från den kontinent, liten skit du. Om du bara har kunna
-veta den ohelig straff som liten "smart" kommentar av du var på väg att få ner över du, så kanske du har skola hålla jävelal
-tunga av du. Men den har kunna du inte, den har göra du inte, och nu betala du den pris, jävelal idiot du.</p>
-
-<p>Jag komma skita vrede över du och du komma att drunkna i den. Du är död, grabb.</p>
-
-<!--
-
-<p>Alla grundläggande ordklasser utom verben försvinner; adjektiv och substantiv konverteras rätt av – "glad" betyder nu <em>att vara/är glad</em>, "hund" betyder
-<em>att vara/är en hund</em>.</p>
-
-<p>För att skapa adjektiv tar man verbet och lägger till <em>le</em>. Samma process, fast med <em>re</em>, används för att skapa substantiv.<p>
-<p>Dessa ordklass-skapande partiklar är egentligen egna ord, men uttalas med en mycket kort paus efter verbet de modifierar. Jag använder här en apostrof för att visa detta.</p>
-
-<ul>
-    <li>Han är pratsam ⟶ Han're är prata'le</li>
-    <li>Den som är stark måste också vara snäll ⟶ Den stark're måste också snäll're</li>
-    <li>Brevbäraren kommer inte på söndag ⟶ Den brevbär're inte kom på söndag're</li>
-</ul>
-
--->
+<p>Welcoem to my web sight</p>
