--- a/cwasm/index.html
+++ b/cwasm/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <title>Notes on working with C and WebAssembly</title>
 <meta name=viewport content='width=device-width,initial-scale=1'>
+<meta charset='utf-8'>
 
 <style>
 body{
+    margin: 0;
     font-family: 'Source Sans Pro', 'sans-serif';
-    margin: 0 auto 100px auto;
-    padding: 0 10px;
+    background-color: #e2e2e2;
+}
+main{
+    overflow: auto;
+    margin: 0 auto;
+    padding: 0 80px 100px 80px;
     max-width: 800px;
     background-color: #f2f2f2;
+}
+@media (max-width: 960px){
+    body{ background-color: #f2f2f2; }
+    main{ padding: 0 20px 100px 20px; }
 }
 pre{
     padding: 10px;
@@ -25,13 +35,14 @@ a{
 }
 </style>
 
+<main>
 <h1>Notes on working with C and WebAssembly</h1>
 
 <p>If you would like to make extremely lean software for the web, C &amp; WebAssembly is one option. Truthfully the only really practical way of doing that has been to use <a href='https://github.com/kripken/emscripten'>Emscripten</a>, emulating a lot of what you expect from a normal C environment in Javascript at the cost of a fair bit of overhead.</p>
 
-<p>If you have a "every byte is precious" attitude like me &ndash; and like to get your hands dirty &ndash; you can certainly do it yourself, as well. The available information online is rather sparse, so this page mostly consists of things I've discovered toying around with just that.</p>
+<p>If you have a "every byte is precious" attitude like me (and like to get your hands dirty!) you can certainly do it yourself, as well. The available information online is rather sparse, so this page mostly consists of things I've discovered toying around with just that.</p>
 
-<p>I was able to make a "Hello Triangle" WebGL2 demo in 1.6KiB (gzipped, +1.4KiB of JS overhead) without too much effort, so expect to get results around that magnitude for similarly simple tasks.</p>
+<p>I was able to make a <a href='#demo'>WebGL2 demo</a> in 7.1KiB (uncompressed, +8KiB of JS overhead) without too much effort, so expect to get results around that magnitude for tasks of similar complexity.</p>
 
 <h2>Building</h2>
 
@@ -43,7 +54,7 @@ a{
 
 <ul>
     <li><b>-fvisibility hidden</b><br>Prevents all the functions in the source from being exported except the ones we explicitly designate later on.</li>
-    <li><b>-Ofast</b><br>Gotta go fast. This is like <em>-O3</em>, except we assume that a whole bunch of specific floating-point behaviour (e.g.&nbsp;INFs) won't happen &ndash; a lot of it will trap the WebAssembler environment anyway, so there's not much point in taking it into account. Use <em>-O3</em> instead if you care about boring things like standards compliance and preventing undefined behaviour     &#x1f609;.</li>
+    <li><b>-Ofast</b><br>Gotta go fast. This is like <em>-O3</em>, except we assume that a whole bunch of specific floating-point behaviour (e.g.&nbsp;INFs) won't happen &ndash; a lot of it will trap the WebAssembler environment anyway, so there's not much point in taking it into account. Use <em>-O3</em> instead if you care about boring things like standards compliance and preventing undefined behaviour &#x1f609;.</li>
 </ul>
 
 <p>Combine all the bitcode into one and optimize it again:</p>
@@ -57,41 +68,39 @@ opt -O3 wasm.bc -o wasm.bc</pre>
 
 <p>Linking can now be done with lld: </p>
 
-<pre>wasm-ld --no-entry wasm.o -o binary.wasm --strip-all -allow-undefined-file wasm.syms</pre>
+<pre>wasm-ld --no-entry wasm.o -o binary.wasm --strip-all -allow-undefined-file wasm.syms --import-memory</pre>
 
 <ul>
     <li><b>--no-entry</b><br>Don't bother with the lack of a <em>main</em> function. We'll call our functions from Javascript when we need to, so having a global entry point doesn't really make sense.</li>
     <li><b>--strip-all</b><br>We only want to expose a select few entry points to our program; this strips away all the others. Given that we compiled the sources with <em>-fvisibility hidden</em>, only functions marked with <em>__attribute__((visibility("default")))</em> (typedef'ed to something not as nasty) will be exposed to our Javascript.</li>
     <li><b>--allow-undefined-file wasm.syms</b><br>We are going to want to call Javascript from our WebAssembly, as well &ndash; <em>wasm.syms</em> contains a list of the names of those functions.</li>
+    <li><b>--import-memory</b><br>We'll supply the memory ourselves from Javascript. We need to do so since the flag <em>--inital-memory</em> which we want to use is broken and doesn't seem to do anything.</li>
 </ul>
 
 <h2>Running</h2>
 
 <p>Our binary is now ready for use. Let's whip up some JS to do so:</p>
 
-<pre>
-let imports = {};
+<pre>let imports = {};
 let memory = null;
 let exports = null;
 
-let xhttp = new XMLHttpRequest();
-xhttp.open( 'GET', 'binary.wasm' );
-xhttp.responseType = 'arraybuffer';
-xhttp.onload = function()
-{
-    WebAssembly['instantiate']( xhttp.response, { "env":imports } ).then( res => {
-        let instance = res['instance'];
-        exports = instance['exports'];
-        memory = new Uint8Array( exports['memory']['buffer'] );
-    });
-}
-xhttp.send();
+let request = await fetch( 'index.html' );
+let binary = await request.arrayBuffer();
+
+imports['memory'] = new WebAssembly['Memory']( {'initial':32} );
+memory = new Uint8Array( imports['memory']['buffer'] );
+let program = await WebAssembly['instantiate']( binary, { "env":imports } );
+
+let instance = program['instance'];
+exports = instance['exports'];
 </pre>
 
 <ul>
     <li><b>imports</b><br>This is a dictionary of functions we will be able to call from inside our WebAssmebly program.</li>
-    <li><b>memory</b><br>Exported from our program instance, this is a typed array of the program memory itself. This will be necessary to access later.</li>
+    <li><b>memory</b><br>32 pages of wasm memory totalling 2MiB. I need that much to work on textures in the demo; loading a 512²-texel 4-component texture requires at least 1MiB, for example.</li>
     <li><b>exports</b><br>A dictionary of C functions that we marked visible. They can now be called like any other JS function.</li>
+    <li><b>['instantiate']</b><br>I call WebAssembly functions like that since the Closure Compiler hasn't gotten the wasm symbols into its whitelist yet; this prevents them from being minified.</li>
 </ul>
 
 <h2>Calling Javascript from C</h2>
@@ -104,7 +113,7 @@ xhttp.send();
 };
 </pre>
 
-<p>Secondly, create declaration for it in a C header somewhere. The only types you can use are <em>i32</em>, <em>i64</em>, <em>f32</em>, and <em>f64</em>; I'll go over how to pass buffers and strings shortly.</p>
+<p>Secondly, create declaration for it in a C header somewhere. The only types you can use are <em>i32</em>, <em>f32</em>, and <em>f64</em>; I'll go over how to pass buffers and strings shortly.</p>
 
 <pre>typedef signed int i32;
 
@@ -216,8 +225,14 @@ imports["glDeleteShader"] = function( shader_id ){
 
 <h2>Builtins</h2>
 
-<p>Fortunately clang has <a href='https://github.com/llvm-mirror/clang/blob/master/include/clang/Basic/Builtins.def'>a few builtin functions</a>, mostly for string handling, bit twiddling, and trigonometry. To use them you can simply call <em>__builtin_cosf()</em> or the like; you won't need a header or anything.</p>
+<p>Fortunately clang has <a href='https://github.com/llvm-mirror/clang/blob/master/include/clang/Basic/Builtins.def'>a few builtin functions</a>, mostly for string handling, bit twiddling, and trigonometry. To use them you can simply call <em>__builtin_cosf()</em> or the like; you won't need a header or anything. There's no guarantee that LLVM won't just try to insert a call to the non-existant C library function anyway however, so it's probably not something you should rely on outside of simple demos and such.</p>
 
 <h2>Symbol optimization</h2>
 
 <p>The names of the imported &amp; exported symbols are faily large &ndash; comparatively! &ndash; so a potential future optimization would be to write a tool that replaces them with shorter strings (e.g. "_a", "_b" and so on) before compilation, making the program even smaller. </p>
+
+<h2 id=demo>Demo</h2>
+
+<p>You can find the demo I did <a href='demo'>here</a>. The source is available on <a href='https://github.com/Aransentin/wasmdemo'>Github</a> as well.</p>
+
+</main>
