--- a/cwasm/demo/index.html
+++ b/cwasm/demo/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<title>Nirna | WASM</title>
+<title>WebAssmebly Demo</title>
 <meta name=viewport content='width=device-width,initial-scale=1'>
-<link rel=icon href=favicon.png>
 
 <style>
 body{
