--- a/cwasm/demo/index.html
+++ b/cwasm/demo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>WebAssmebly Demo</title>
+<title>WebAssembly Demo</title>
 <meta name=viewport content='width=device-width,initial-scale=1'>
 
 <style>
