--- a/cwasm/index.html
+++ b/cwasm/index.html
@@ -42,7 +42,7 @@ a{
 
 <p>If you have a "every byte is precious" attitude like me (and like to get your hands dirty!) you can certainly do it yourself, as well. The available information online is rather sparse, so this page mostly consists of things I've discovered toying around with just that.</p>
 
-<p>I was able to make a <a href='#demo'>WebGL2 demo</a> in 7.1KiB (uncompressed, +8KiB of JS overhead) without too much effort, so expect to get results around that magnitude for tasks of similar complexity.</p>
+<p>I was able to make a <a href='#demo'>WebGL2 demo</a> in 7.1KiB (uncompressed, not counting textures) without too much effort, so expect to get results around that magnitude for tasks of similar complexity.</p>
 
 <h2>Building</h2>
 
@@ -226,10 +226,6 @@ imports["glDeleteShader"] = function( shader_id ){
 <h2>Builtins</h2>
 
 <p>Fortunately clang has <a href='https://github.com/llvm-mirror/clang/blob/master/include/clang/Basic/Builtins.def'>a few builtin functions</a>, mostly for string handling, bit twiddling, and trigonometry. To use them you can simply call <em>__builtin_cosf()</em> or the like; you won't need a header or anything. There's no guarantee that LLVM won't just try to insert a call to the non-existant C library function anyway however, so it's probably not something you should rely on outside of simple demos and such.</p>
-
-<h2>Symbol optimization</h2>
-
-<p>The names of the imported &amp; exported symbols are faily large &ndash; comparatively! &ndash; so a potential future optimization would be to write a tool that replaces them with shorter strings (e.g. "_a", "_b" and so on) before compilation, making the program even smaller. </p>
 
 <h2 id=demo>Demo</h2>
 
