--- a/svenska/index.html
+++ b/svenska/index.html
@@ -7,14 +7,14 @@
 <style>
 body{
     margin: 0 auto;
-    padding: 0 10px 100px 10px;
+    padding: 0 16px 100px 16px;
     max-width: 800px;
     font-family: 'Source Sans Pro';
     font-size: 16px;
     line-height: 20px;
 }
-h1{font-size: 30px; height: 30px; line-height: 30px;}
-h2{font-size: 25px; height: 25px; line-height: 25px;}
+h1{font-size: 30px; line-height: 35px;}
+h2{font-size: 25px; line-height: 30px;}
 </style>
 
 <h1>Ett förslag till en analytisk reform av det svenska språket</h1>
@@ -100,18 +100,18 @@ och har inblanda al var i mången hemlig räd mot Al-Qaeda, och jag ha över 300
 gorilla al krig al för och jag var den mest bra pricka al skytt i hel den vapen al styrka av Sverige.</p>
 
 <p>För jag var du ingenting sära al än bara en mål. Jag komma utplåna du med precision lik aldrig har skåda på den här
-jord, märk du ord av jag. Tro du att du kunna kom undan med att säg sådan skit till jag via internet? Tänk du igen, jävel du.</p>
+jord, märk du ord av jag. Tro du att du kan kom undan med att säg sådan skit till jag via internet? Tänk du igen, jävel du.</p>
 
 <p>Medan två jag tala kontakta jag hemlig nätverk av jag med spion över hel Sverige, och IP av du spåra just nu, så mest bra
-för du att du förbereda du för den storm, kryp. Den storm som utplåna den patetisk sak du kalla liv av du. Du var död, grabb.</p>
+för du att du förbered du för den storm, kryp. Den storm som utplåna den patetisk sak du kalla liv av du. Du var död, grabb.</p>
 
-<p>Jag kunna var var som mest gärna, när som mest gärna, och jag kunna döda du på över 700 olik sätt, och den var endast
+<p>Jag kan var var som mest gärna, när som mest gärna, och jag kan döda du på över 700 olik sätt, och den var endast
 med två bar hand av jag.</p>
 
-<p>Inte bara var jag utföra al utbildad i ovapen al kamp, utan jag ha även tillgång till hel arsenal av den försvara al makt, och
-jag komma att använda den för att förinta eländig röv av du från den kontinent, krymp al skit du. Om du bara har kunna
+<p>Inte bara var jag utför al utbilda i ovapen al kamp, utan jag ha även tillgång till hel arsenal av den försvara al makt, och
+jag kom att använda den för att förinta eländig röv av du från den kontinent, krymp al skit du. Om du bara har kan
 veta den ohelga al straff som liten "smart" kommentar av du var på väg att få ner över du, så kanske du har skola hålla jävel al
-tunga av du. Men den har kunna du inte, den har göra du inte, och nu betala du den pris, jävel al idiot du.</p>
+tunga av du. Men den har kan du inte, den har gör du inte, och nu betala du den pris, jävel al idiot du.</p>
 
 <p>Jag komma skit vrede över du och du komma att drunkna i den. Du är död, grabb.</p>
 
