--- a/svenska/index.html
+++ b/svenska/index.html
@@ -39,7 +39,7 @@ h2{font-size: 25px; line-height: 30px;}
 
 <ul>
     <li>Jag har tolv kronor ⟶ Jag har tolv krona</li>
-    <li>Ta på dig kläder ⟶ Ta på dig kläd</li>
+    <li>Ta på dig kläder ⟶ Ta på dig kläde</li>
     <li>Katten sprang ifrån dem ⟶ Den katt sprang ifrån få hen</li>
 </ul>
 
